--- a/app/src/main/res/layout/activity_delivery_otp.xml
+++ b/app/src/main/res/layout/activity_delivery_otp.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:padding="24dp"
     android:gravity="center"
+    android:background="@color/yellow"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:textColor="@color/white"
         android:text="PIN VERIFICATION"
         android:textSize="34sp"
         android:textStyle="bold" />
@@ -21,12 +23,17 @@
         android:hint="Enter PIN"
         android:layout_marginTop="30dp"
         android:inputType="number"
+        android:textAlignment="center"
+        android:background="@drawable/custom_edittext"
         android:layout_width="match_parent"
         android:layout_height="48dp"/>
 
     <Button
         android:id="@+id/btnVerifyOtp"
         android:text="Verify PIN"
+        android:layout_marginTop="30dp"
+        android:textSize="20sp"
+        android:backgroundTint="@color/dark_orange"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
