--- a/app/src/main/res/layout/activity_register_admin.xml
+++ b/app/src/main/res/layout/activity_register_admin.xml
@@ -8,133 +8,112 @@
     android:background="@color/yellow"
     tools:context=".RegisterActivityAdmin">
 
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:text="Register New Admin"
+        android:textColor="@color/white"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.4" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="417dp"
-        android:layout_height="538dp"
+        android:layout_width="370dp"
+        android:layout_height="481dp"
         android:layout_margin="20dp"
-        app:cardBackgroundColor="#80FFFFFF"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.968"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.708">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="24dp">
+
+            <EditText
+                android:id="@+id/admin_id_regis_tf"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@color/light_yellow"
+                android:hint="Admin ID"
+                android:inputType="text"
+                android:textColor="@color/dark_brown" />
+
+            <EditText
+                android:id="@+id/name_regis_tf"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/light_yellow"
+                android:hint="Name"
+                android:inputType="text"
+                android:textColor="@color/dark_brown" />
+
+            <EditText
+                android:id="@+id/pass_regis_tf"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/light_yellow"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColor="@color/dark_brown" />
+
+            <EditText
+                android:id="@+id/email_regis_tf"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/light_yellow"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/dark_brown" />
+
+            <EditText
+                android:id="@+id/phno_regis_tf"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/light_yellow"
+                android:hint="Phone Number"
+                android:inputType="phone"
+                android:textColor="@color/dark_brown" />
+
+            <Button
+                android:id="@+id/regis_regis_btn"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_marginTop="24dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Register Now"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <ProgressBar
         android:id="@+id/progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-
-    <EditText
-        android:id="@+id/name_regis_tf"
-        android:layout_width="265dp"
-        android:layout_height="53dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.582" />
-
-    <EditText
-        android:id="@+id/pass_regis_tf"
-        android:layout_width="263dp"
-        android:layout_height="54dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.661" />
-
-    <EditText
-        android:id="@+id/email_regis_tf"
-        android:layout_width="262dp"
-        android:layout_height="58dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass_regis_tf"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/regis_regis_btn"
-        android:layout_width="209dp"
-        android:layout_height="52dp"
-        android:background="@color/black"
-        android:hint="Register Now"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:gravity="center"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.554"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.911" />
-
-    <EditText
-        android:id="@+id/phno_regis_tf"
-        android:layout_width="263dp"
-        android:layout_height="59dp"
-        android:ems="10"
-        android:hint="Phone Number"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.833" />
-
-    <EditText
-        android:id="@+id/admin_id_regis_tf"
-        android:layout_width="264dp"
-        android:layout_height="59dp"
-        android:ems="10"
-        android:hint="Admin ID"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="250dp"
-        android:layout_height="54dp"
-
-        android:layout_gravity="center_horizontal"
-        android:text="REGISTER NOW"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.408" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
