--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:background="@drawable/custom_edittext"
         android:textStyle="bold"/>
 
     <TextView
@@ -18,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/custom_edittext"
         android:textColor="@android:color/black"
         android:textSize="16sp"/>
 </LinearLayout>
