--- a/app/src/main/res/layout/item_admin_approve_vendor.xml
+++ b/app/src/main/res/layout/item_admin_approve_vendor.xml
@@ -24,7 +24,9 @@
             android:id="@+id/tvVendorName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -33,47 +35,71 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tvCuisine"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
             android:layout_height="wrap_content"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tvDescription"
             android:layout_width="match_parent"
+            android:background="@drawable/custom_edittext"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tvDeliveryTime"
             android:layout_width="match_parent"
+            android:background="@drawable/custom_edittext"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tvPriceForTwo"
             android:layout_width="match_parent"
+            android:background="@drawable/custom_edittext"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tvEmail"
             android:layout_width="match_parent"
+            android:background="@drawable/custom_edittext"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tvPhone"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
             android:layout_height="wrap_content"
             android:textSize="14sp"/>
 
