--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -15,6 +15,9 @@
             android:id="@+id/studentName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
+            android:textSize="18sp"
             android:textStyle="bold"/>
 
         <RatingBar
@@ -29,19 +32,28 @@
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
+            android:textSize="18sp"
             android:layout_marginTop="8dp"/>
 
         <TextView
             android:id="@+id/orderId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"/>
+            android:textColor="@color/dark_brown"
+            android:background="@drawable/custom_edittext"
+            android:textSize="18sp"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:id="@+id/timestamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textColor="?android:attr/textColorSecondary"/>
+            android:textColor="@color/dark_orange"
+            android:background="@drawable/custom_edittext"
+            android:textSize="18sp"
+            android:layout_marginTop="8dp"
+            />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
