--- a/app/src/main/res/layout/item_vendor_product.xml
+++ b/app/src/main/res/layout/item_vendor_product.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
@@ -19,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
+            android:background="@color/light_yellow"
             android:src="@drawable/ic_image_placeholder" />
 
         <TextView
@@ -27,15 +29,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textSize="18sp"
+            android:background="@color/light_yellow"
+            android:textColor="@color/dark_brown"
             android:textStyle="bold"
-            android:textColor="@color/black" />
+             />
 
         <TextView
             android:id="@+id/tvPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="@color/black" />
+            android:layout_marginTop="4dp"
+            android:background="@color/light_yellow"
+            android:textColor="@color/dark_brown"/>
 
         <TextView
             android:id="@+id/tvDescription"
@@ -43,8 +49,10 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:ellipsize="end"
+            android:layout_marginTop="4dp"
             android:textSize="14sp"
-            android:textColor="@color/black" />
+            android:background="@color/light_yellow"
+            android:textColor="@color/dark_brown" />
 
         <TextView
             android:id="@+id/tvStock"
@@ -52,7 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="14sp"
-            android:textColor="@color/black" />
+            android:background="@color/light_yellow"
+            android:textColor="@color/dark_brown" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,13 +75,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="In Stock" />
+                android:text="In Stock"
+                android:backgroundTint="@color/dark_orange"/>
 
             <Button
                 android:id="@+id/btnEdit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:backgroundTint="@color/dark_orange"
                 android:text="Edit" />
         </LinearLayout>
     </LinearLayout>
