--- a/app/src/main/res/layout/fragment_dashboard__vendor.xml
+++ b/app/src/main/res/layout/fragment_dashboard__vendor.xml
@@ -8,11 +8,21 @@
     android:backgroundTint="@color/yellow"
     android:background="@color/light_gray">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="16dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Dashboard"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="32sp"
+            android:layout_marginBottom="20dp"/>
 
         <!-- Shop Name Card -->
         <androidx.cardview.widget.CardView
