--- a/app/src/main/res/drawable/baseline_adjust_24.xml
+++ b/app/src/main/res/drawable/baseline_adjust_24.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.49,2 2,6.49 2,12s4.49,10 10,10 10,-4.49 10,-10S17.51,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8zM15,12c0,1.66 -1.34,3 -3,3s-3,-1.34 -3,-3 1.34,-3 3,-3 3,1.34 3,3z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M12,6.5c3.15,0 5.96,1.7 7.59,4.5 -0.58,0.99 -1.38,1.86 -2.29,2.58l1.45,1.45c1.28,-1.08 2.38,-2.43 3.17,-4.03C19.27,7.61 15,4.5 10,4.5c-0.86,0 -1.69,0.11 -2.47,0.3l1.57,1.57C9.67,6.27 10.83,6.5 12,6.5zM2.1,2.1L0.69,3.51l2.25,2.25C1.72,7.22 0.73,9.51 0,12c1.73,4.39 6,7.5 11,7.5 1.87,0 3.63,-0.46 5.2,-1.25l2.28,2.28 1.41,-1.41L2.1,2.1zM5.27,6.9L6.9,8.53C6.34,9.3 6,10.13 6,11c0,3.31 2.69,6 6,6 0.87,0 1.7,-0.34 2.47,-0.9l1.63,1.63C14.88,18.27 13.47,18.5 12,18.5c-4.97,0 -9.24,-3.11 -11,-7.5 0.73,-1.86 1.92,-3.52 3.41,-4.8l0.86,0.7z"/>
 </vector>
