--- a/app/src/main/res/layout/activity_admin_student_details.xml
+++ b/app/src/main/res/layout/activity_admin_student_details.xml
@@ -93,7 +93,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <!-- Feedback -->
+        <!-- Feedback
         <androidx.cardview.widget.CardView
             android:id="@+id/cardFeedback"
             android:layout_width="match_parent"
@@ -126,7 +126,7 @@
                     android:layout_marginStart="12dp"
                     android:textColor="@color/black" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>-->
 
     </LinearLayout>
 </ScrollView>
