--- a/app/src/main/res/layout/activity_student_review.xml
+++ b/app/src/main/res/layout/activity_student_review.xml
@@ -60,6 +60,7 @@
             android:hint="Share details about your experience..."
             android:inputType="textMultiLine"
             android:gravity="top"
+            android:textColor="@color/dark_brown"
             android:padding="12dp"
             android:background="@drawable/custom_edittext"
             android:layout_marginBottom="24dp"/>
